[update] files structure

--- a/index.html
+++ b/index.html
@@ -4,25 +4,33 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Array</title>
+    <link rel="stylesheet" href="./public/css/app.css">
+    <title>array.</title>
 </head>
 
 <body>
-    <!-- Ghizlane -->
+    <!--& header : ghizlane -->
     <header></header>
+
+    <!--* main -->
     <main>
-        <!-- ghizlane -->
+        <!--& first section : ghizlane -->
         <section></section>
-        <!-- ibrahim -->
+
+        <!--! second section : ibrahim -->
         <section></section>
-        <!-- ibrahim -->
+
+        <!--! third section : ibrahim -->
         <section></section>
-        <!-- ilyass -->
+
+        <!--^ fourth section : ilyass -->
         <section></section>
-        <!-- ilyass -->
+
+        <!--^ fifth section : ilyass -->
         <section></section>
     </main>
-    <!-- ghizlane  -->
+
+    <!--& footer : ghizlane  -->
     <footer></footer>
 </body>
 
