--- a/index.html
+++ b/index.html
@@ -5,12 +5,25 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./public/css/app.css">
-    <title>array.</title>
+    <title>array</title>
 </head>
 
 <body>
     <!--& header : ghizlane -->
-    <header></header>
+    <header>
+        <nav>
+            <div class="logo">
+                <a>array.</a>
+            </div>
+            <div class="about">
+                <a href="">Products</a>
+                <a href="">Features</a>
+                <a href="">Reviews</a>
+                <a href="">Pricing</a>
+                <button>Sign Up</button>
+            </div>
+        </nav>
+    </header>
 
     <!--* main -->
     <main>
