[complet] first section

--- a/index.html
+++ b/index.html
@@ -28,7 +28,35 @@
     <!--* main -->
     <main>
         <!--& first section : ghizlane -->
-        <section></section>
+        <section class="first_section">
+            <!-- image -->
+            <div class="part1">
+                <img src="./public/images/notes.png" alt="" />
+            </div>
+            <!-- text -->
+            <div class="part2">
+                <h1>Multi purpose Business landing page</h1>
+            </div>
+            <!-- paragraphe -->
+            <div class="part3">
+                <p>
+                    software and analytics services will render your chunks into
+                    meaningful data
+                </p>
+            </div>
+            <!-- button -->
+            <div class="part4">
+                <button>REGISTER NOW</button>
+            </div>
+            <!-- images -->
+            <div class="part5">
+                <a href=""><img src="./public/images/partner1.png" alt="" /></a>
+                <a href=""><img src="./public/images/partner2.png" alt="" /></a>
+                <a href=""><img src="./public/images/partner3.png" alt="" /></a>
+                <a href=""><img src="./public/images/partner4.png" alt="" /></a>
+                <a href=""><img src="./public/images/partner5.png" alt="" /></a>
+            </div>
+        </section>
 
         <!--! second section : ibrahim -->
         <section></section>
