[complet] second section

--- a/index.html
+++ b/index.html
@@ -59,7 +59,56 @@
         </section>
 
         <!--! second section : ibrahim -->
-        <section></section>
+        <section class="second-section">
+
+            <div class="first-div">
+                <h3 class="first-hrading">Welcome to array, where data matters.</h3><br>
+                <p>we'll Deliver the best stories and ideas on the topics you care baout the most <br> straight to your
+                    home
+                    pages, app, or inbox.</p>
+            </div>
+            <div class="second-div">
+                <div>
+                    <img class="first-img" width="50px" src="./public/images/icones/closh.png" alt="">
+                    <h3 class="first-hrading">Responsive</h3>
+                    <p>we'll Deliver the best stories and ideas on <br> the topics you care baout the most <br> straight
+                        to your</p>
+                </div>
+                <div>
+                    <img class="first-img" width="50px" src="./public/images/icones/trophy.png" alt="">
+                    <h3 class="first-hrading">Responsive</h3>
+                    <p>we'll Deliver the best stories and ideas on <br> the topics you care baout the most <br> straight
+                        to your</p>
+                </div>
+                <div>
+                    <img class="first-img" width="50px" src="./public/images/icones/lock.png" alt="">
+                    <h3 class="first-hrading">Responsive</h3>
+                    <p>we'll Deliver the best stories and ideas on <br> the topics you care baout the most <br> straight
+                        to your</p>
+                </div>
+            </div>
+
+            <div class="second-div">
+                <div>
+                    <img class="first-img" width="50px" src="./public/images/icones/mail.png" alt="">
+                    <h3 class="first-hrading">User Friendly</h3>
+                    <p>we'll Deliver the best stories and ideas on <br> the topics you care baout the most <br> straight
+                        to your</p>
+                </div>
+                <div>
+                    <img class="first-img" width="50px" src="./public/images/icones/chain.png" alt="">
+                    <h3 class="first-hrading">AI Algorithms</h3>
+                    <p>we'll Deliver the best stories and ideas on <br> the topics you care baout the most <br> straight
+                        to your</p>
+                </div>
+                <div>
+                    <img class="first-img" width="50px" src="./public/images/icones/picture.png" alt="">
+                    <h3 class="first-hrading">Built-in Camera</h3>
+                    <p>we'll Deliver the best stories and ideas on <br> the topics you care baout the most <br> straight
+                        to your</p>
+                </div>
+            </div>
+        </section>
 
         <!--! third section : ibrahim -->
         <section></section>
