[complet] third section

--- a/index.html
+++ b/index.html
@@ -111,7 +111,42 @@
         </section>
 
         <!--! third section : ibrahim -->
-        <section></section>
+        <section class="third-section">
+
+            <div class="first-div">
+                <h3 class="second-heading3">Build better landing pages</h3><br>
+                <p>When you get straight to the points the presentation looks attractive on your<br> web pages. Keep it
+                    simple and clean always.</p>
+            </div>
+
+            <div class="container">
+                <div>
+                    <img width="700px" class="second-img" src="./public/images/feature_1.png" alt="">
+                </div>
+                <div class="section-div">
+                    <h3 class="second-heading2">Dynamic charts.</h3>
+                    <p>Whe you get straight on the <br> point the presentation looks <br> attractive on your web pages.
+                    </p>
+                    <a href=""><span>Know</span> more</a>
+                </div>
+            </div>
+
+
+            <div class="container">
+                <div class="section-div">
+                    <h3 class="second-heading2">Mobile Analytics.</h3>
+                    <p>Whe you get straight on the <br> point the presentation looks <br> attractive on your web pages.
+                    </p>
+                    <a href=""><span>Know</span> more</a>
+                </div>
+
+                <div>
+                    <img width="700px" class="second-img" src="./public/images/feature_1.png" alt="">
+                </div>
+
+            </div>
+
+        </section>
 
         <!--^ fourth section : ilyass -->
         <section></section>
