[complet] fourth section

--- a/index.html
+++ b/index.html
@@ -149,7 +149,31 @@
         </section>
 
         <!--^ fourth section : ilyass -->
-        <section></section>
+        <section class="section4">
+            <div class="section4-desciption">
+                <h1>Boost your revenue & cut work hours</h1>
+                <p>Organized workflow and predictive patters to boost your revenue.</p>
+            </div>
+
+            <div class="section4-statistics">
+                <div>
+                    <h1>47%</h1>
+                    <p>Lesser backlogs</p>
+                </div>
+                <div>
+                    <h1>33%</h1>
+                    <p>Higher Profits</p>
+                </div>
+                <div>
+                    <h1>80%</h1>
+                    <p>Trusted credibility</p>
+                </div>
+            </div>
+
+            <div class="section4-moreinfo">
+                <a>Know more about the template</a>
+            </div>
+        </section>
 
         <!--^ fifth section : ilyass -->
         <section></section>
