[complet] fifth section

--- a/index.html
+++ b/index.html
@@ -176,7 +176,40 @@
         </section>
 
         <!--^ fifth section : ilyass -->
-        <section></section>
+        <section class="section5">
+            <div class="section5-description">
+                <div class="description-item">
+                    <div>
+                        <img src="./public/images/icones/campass.png" width="30" alt="Icon">
+                    </div>
+                    <div>
+                        <h3>Client Support</h3>
+                        <p>Team hangouts and instant text messaging right from the dashboard</p>
+                    </div>
+                </div>
+                <div class="description-item">
+                    <div>
+                        <img src="./public/images/icones/play.png" width="30" alt="Icon">
+                    </div>
+                    <div>
+                        <h3>Secure Servers</h3>
+                        <p>Team hangouts and instant text messaging right from the dashboard</p>
+                    </div>
+                </div>
+                <div class="description-item">
+                    <div>
+                        <img src="./public/images/icones/note.png" width="30" alt="Icon">
+                    </div>
+                    <div>
+                        <h3>Product Feedback</h3>
+                        <p>Team hangouts and instant text messaging right from the dashboard</p>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <img src="./public/images/feature.png" alt="Hero Image">
+            </div>
+        </section>
     </main>
 
     <!--& footer : ghizlane  -->
