[complet] footer and [finish] project

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <section class="second-section">
 
             <div class="first-div">
-                <h3 class="first-hrading">Welcome to array, where data matters.</h3><br>
+                <h1 class="first-hrading">Welcome to array, where data matters.</h1><br>
                 <p>we'll Deliver the best stories and ideas on the topics you care baout the most <br> straight to your
                     home
                     pages, app, or inbox.</p>
@@ -114,7 +114,7 @@
         <section class="third-section">
 
             <div class="first-div">
-                <h3 class="second-heading3">Build better landing pages</h3><br>
+                <h1 class="second-heading3">Build better landing pages</h1><br>
                 <p>When you get straight to the points the presentation looks attractive on your<br> web pages. Keep it
                     simple and clean always.</p>
             </div>
@@ -124,7 +124,7 @@
                     <img width="700px" class="second-img" src="./public/images/feature_1.png" alt="">
                 </div>
                 <div class="section-div">
-                    <h3 class="second-heading2">Dynamic charts.</h3>
+                    <h2 class="second-heading2">Dynamic charts.</h2>
                     <p>Whe you get straight on the <br> point the presentation looks <br> attractive on your web pages.
                     </p>
                     <a href=""><span>Know</span> more</a>
@@ -134,7 +134,7 @@
 
             <div class="container">
                 <div class="section-div">
-                    <h3 class="second-heading2">Mobile Analytics.</h3>
+                    <h2 class="second-heading2">Mobile Analytics.</h2>
                     <p>Whe you get straight on the <br> point the presentation looks <br> attractive on your web pages.
                     </p>
                     <a href=""><span>Know</span> more</a>
@@ -213,7 +213,35 @@
     </main>
 
     <!--& footer : ghizlane  -->
-    <footer></footer>
+    <footer>
+        <div class="footer-top">
+            <div class="footer_part1">
+                <h4>GRAB ARRAY FOR BEST PRICE TODAY</h4>
+                <h1>
+                    Start now and turn your online business into a profitable route
+                </h1>
+            </div>
+            <div class="footer_part2">
+                <input type="email" placeholder="Enter your email address" />
+                <button>Sign Up Now</button>
+                <p>14-day free trial and no credit card required</p>
+            </div>
+        </div>
+
+        <div class="footer-bottom">
+            <div class="logo">
+                <h4>array.</h4>
+            </div>
+            <div class="copyright">
+                <p>&copy; Ghil Ghlof 2023 - Rights Reserved</p>
+            </div>
+            <div class="socials">
+                <a>Facebook</a>
+                <a>Twitter</a>
+                <a>Linkdin</a>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
